--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 </html>
 <!-- <script src="./index.js"></script> -->
 <!-- <script src="./Higher_Order_Functions.js"></script> -->
-<script src="/Closure_Corner_cases.js"></script>
+<script src="/setTimeOut_Closure.js"></script>
