--- a/JS_Season-1/index.html
+++ b/JS_Season-1/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="button" id="btn">Click</button>
 </body>
 </html>
 <!-- <script src="./index.js"></script> -->
 <!-- <script src="./Higher_Order_Functions.js"></script> -->
-<script src="/setTimeOut_Closure.js"></script>
+<script src="/callback_functions.js"></script>
