JS concepts and ques

--- a/JS_Season-2/index.html
+++ b/JS_Season-2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./Promise_apis/example.js"></script>
+    <script src="./async-await//call_stack_forsame.js"></script>
 </body>
 </html>
