Js core concepts and code

--- a/JS-topics/test.html
+++ b/JS-topics/test.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./async-await//call_stack_forsame.js"></script> -->
-    <script src="./Output-Promise.js"></script>
+    <script src="./Polyfill_Bind.js"></script>
 </body>
 </html>
